# Click-Between-Frames

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml
src/: android.cpp  apple.mm  includes.hpp  input.cpp  linuxeventcodes.hpp  main.cpp  notwindows.cpp  timestamp.hpp  windows.cpp  windows.hpp
src/linux/: Makefile  build.sh  linux-input.cpp
